jhistling2018_ctmc.ipynb: switched to Python 3

--- a/lattyp/jhistling2018_ctmc.ipynb
+++ b/lattyp/jhistling2018_ctmc.ipynb
@@ -53,43 +53,43 @@
     "plt.subplots_adjust(left=None, bottom=None, right=None, top=None, wspace=0.4, hspace=0.4)\n",
     "plt.xlim([0.1, 1000])\n",
     "plt.ylim([0.0, 1.0])\n",
-    "plt.plot(xs, ys[:,0,0], linewidth=2, label=\"0 to 0\")\n",
-    "plt.plot(xs, ys[:,0,1], \"r:\", linewidth=2, label=\"0 to 1\")\n",
+    "plt.plot(xs, ys[:,0,0], linewidth=2, label=\"0 → 0\")\n",
+    "plt.plot(xs, ys[:,0,1], \"r:\", linewidth=2, label=\"0 → 1\")\n",
     "plt.legend(loc=\"upper right\", fontsize=8)\n",
-    "plt.xlabel(u\"(a)\", size=12)\n",
-    "plt.ylabel(u\"確率\", size=10)\n",
+    "plt.xlabel(\"(a)\", size=12)\n",
+    "plt.ylabel(\"確率\", size=10)\n",
     "\n",
     "plt.subplot(223)\n",
     "plt.subplots_adjust(left=None, bottom=None, right=None, top=None, wspace=0.4, hspace=0.4)\n",
     "plt.xlim([0.1, 1000])\n",
     "plt.ylim([-3.0, 0.0])\n",
     "plt.yticks(np.arange(-3.0, 1.0, 1.0))\n",
-    "plt.plot(xs, logys[:,0,0], linewidth=2, label=\"0 to 0\")\n",
-    "plt.plot(xs, logys[:,0,1], \"r:\", linewidth=2, label=\"0 to 1\")\n",
+    "plt.plot(xs, logys[:,0,0], linewidth=2, label=\"0 → 0\")\n",
+    "plt.plot(xs, logys[:,0,1], \"r:\", linewidth=2, label=\"0 → 1\")\n",
     "plt.legend(loc=\"lower right\", fontsize=8)\n",
-    "plt.xlabel(u\"(c)\", size=12)\n",
-    "plt.ylabel(u\"点数 (対数確率)\", size=10)\n",
+    "plt.xlabel(\"(c)\", size=12)\n",
+    "plt.ylabel(\"点数 (対数確率)\", size=10)\n",
     "\n",
     "plt.subplot(222)\n",
     "plt.subplots_adjust(left=None, bottom=None, right=None, top=None, wspace=0.4, hspace=0.4)\n",
     "plt.xlim([0.1, 1000])\n",
     "plt.ylim([0.0, 1.0])\n",
-    "plt.plot(xs, ys[:,1,0], linewidth=2, label=\"1 to 0\")\n",
-    "plt.plot(xs, ys[:,1,1], \"r:\", linewidth=2, label=\"1 to 1\")\n",
+    "plt.plot(xs, ys[:,1,0], linewidth=2, label=\"1 → 0\")\n",
+    "plt.plot(xs, ys[:,1,1], \"r:\", linewidth=2, label=\"1 → 1\")\n",
     "plt.legend(loc=\"upper right\", fontsize=8)\n",
-    "plt.xlabel(u\"(b)\", size=12)\n",
-    "plt.ylabel(u\"確率\", size=10)\n",
+    "plt.xlabel(\"(b)\", size=12)\n",
+    "plt.ylabel(\"確率\", size=10)\n",
     "\n",
     "plt.subplot(224)\n",
     "plt.subplots_adjust(left=None, bottom=None, right=None, top=None, wspace=0.4, hspace=0.4)\n",
     "plt.xlim([0.1, 1000])\n",
     "plt.ylim([-3.0, 0.0])\n",
     "plt.yticks(np.arange(-3.0, 1.0, 1.0))\n",
-    "plt.plot(xs, logys[:,1,0], linewidth=2, label=\"1 to 0\")\n",
-    "plt.plot(xs, logys[:,1,1], \"r:\", linewidth=2, label=\"1 to 1\")\n",
+    "plt.plot(xs, logys[:,1,0], linewidth=2, label=\"1 → 0\")\n",
+    "plt.plot(xs, logys[:,1,1], \"r:\", linewidth=2, label=\"1 → 1\")\n",
     "plt.legend(loc=\"lower right\", fontsize=8)\n",
-    "plt.xlabel(u\"(d)\", size=12)\n",
-    "plt.ylabel(u\"点数 (対数確率)\", size=10)\n",
+    "plt.xlabel(\"(d)\", size=12)\n",
+    "plt.ylabel(\"点数 (対数確率)\", size=10)\n",
     "\n",
     "plt.savefig('ctmc.pdf', bbox_inches=\"tight\")"
    ]
@@ -97,21 +97,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15rc1"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
